CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(libRCON C)

ADD_LIBRARY(libRCON STATIC rcon.c rcon/rcon.h)
TARGET_INCLUDE_DIRECTORIES(libRCON PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
SET_TARGET_PROPERTIES(libRCON PROPERTIES C_STANDARD 90)
IF (UNIX OR APPLE)
	TARGET_LINK_LIBRARIES(libRCON PUBLIC pthread)
ENDIF (UNIX OR APPLE)


ADD_EXECUTABLE(RCON_example_client examples/rcon_client.c)
TARGET_LINK_LIBRARIES(RCON_example_client PUBLIC libRCON)
SET_TARGET_PROPERTIES(RCON_example_client PROPERTIES C_STANDARD 90)
